--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,10 @@ jobs:
     with:
       node-version: '20.x'
     
-  -name: Instala deps.
-  run: npm install
-  -name: Executa build
-  run: npx tsc
-  -name: Executaando testes
-  run: npm test
+    builds:
+    - name: Instala deps.
+      run: npm install
+    - name: Executa build
+      run: npx tsc
+    - name: Executaando testes
+      run: npm test
