--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     with:
       node-version: '20.x'
     
-    builds:
+    steps:
     - name: Instala deps.
       run: npm install
     - name: Executa build
